# LJsisimu

./: .gitignore  CMakeLists.txt  README.md  getcpus  run
include/: simu.hpp  utils.hpp
scripts/: binify.py  gif.py  visu.py
src/: CMakeLists.txt  main.cpp  simu.cpp
